# WCPP

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  setup.py  tsconfig.json
cpp/: Buffer.hpp  Bus.cpp  Bus.hpp  CANBus.cpp  CANBus.hpp  CMakeLists.txt  COBS.hpp  CRC8.c  Packet.cpp  Packet.hpp  Shared.cpp  Shared.hpp  UARTBus.cpp  UARTBus.hpp  compile_flags.txt  float16.cpp  float16.h  heap.cpp  heap.h  packet.h  test_packet.cpp
dest/: index.d.ts  index.d.ts.map  index.js  index.js.map  packet.d.ts  packet.d.ts.map  packet.js  packet.js.map
python/: __init__.py  packet.py  test_packet.py  util.py
tools/: log_reader.py  mag_calibrator.py
typescript/: packet.ts
